@@ -84,9 +84,9 @@ class SalesFilter implements XActionListener, XPropertyChangeListener, XResetLis
 
             // init control models
             m_xFilterList.setPropertyValue( "Dropdown", Boolean.TRUE );
-            m_xFilterList.setPropertyValue( "LineCount", new Short( (short)11 ) );
+            m_xFilterList.setPropertyValue( "LineCount", Short.valueOf( (short)11 ) );
             m_xFilterList.setPropertyValue( "StringItemList", new String[] { "ever (means no filter)", "this morning", "1 week ago", "1 month ago", "1 year ago", "<other>" } );
-            m_xFilterList.setPropertyValue( "DefaultSelection", new Short[] { new Short( (short)0 ) } );
+            m_xFilterList.setPropertyValue( "DefaultSelection", new Short[] { Short.valueOf( (short)0 ) } );
 
             m_xApplyFilter.setPropertyValue( "Label", "Apply Filter" );
 
