@@ -116,7 +116,7 @@ public class DisableCommandsTest extends java.lang.Object {
                 com.sun.star.view.XViewSettingsSupplier.class,
                 xModel.getCurrentController());
             xViewSettings.getViewSettings().setPropertyValue(
-                "ZoomType", new Short((short)0));
+                "ZoomType", Short.valueOf((short)0));
             }
             // test document will be closed later
 
