@@ -36,8 +36,8 @@ public class _Footnote extends MultiPropertyTest {
     * value must be defined.
     */
     public void _ReferenceId() {
-        final Short val1 = new Short( (short) 1);
-        final Short val2 = new Short( (short) 2);
+        final Short val1 = Short.valueOf( (short) 1);
+        final Short val2 = Short.valueOf( (short) 2);
 
         log.println("Testing with custom Property tester");
         testProperty("ReferenceId", val1, val2);
