@@ -243,7 +243,7 @@ public abstract class DataAware {
                 if (getMethod.getReturnType().equals(String.class))
                     return PropertyNames.EMPTY_STRING;
                 if (getMethod.getReturnType().equals(Short.class))
-                    return new Short((short) 0);
+                    return Short.valueOf((short) 0);
                 if (getMethod.getReturnType().equals(Integer.class))
                     return 0;
                 if (getMethod.getReturnType().equals(short[].class))
